PROTON-2137: Removing ssl init from ssl_server_options default constructor